<?xml version="1.0" encoding="utf-8" standalone="yes"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <!-- Text for confirmation for a positive action in dialog  -->
    <string name="mozac_feature_prompts_ok">OK</string>
    <!-- Text for confirmation for a negative action in dialog.  -->
    <string name="mozac_feature_prompts_cancel">Cancel</string>
    <!-- When a page shows many dialogs, this checkbox will appear for letting the user choose to prevent showing more dialogs. -->
    <string name="mozac_feature_prompts_no_more_dialogs">Prevent this page from creating additional dialogs</string>
    <!-- Text for a positive button, when an user selects a date in date/time picker. -->
    <string name="mozac_feature_prompts_set_date">Set</string>
    <!-- Text for a button that clears the selected input in the date/time picker. -->
    <string name="mozac_feature_prompts_clear">Clear</string>
    <!-- Text for the title of an authentication dialog. -->
    <string name="mozac_feature_prompt_sign_in">Sign in</string>
    <!-- Text for username field in an authentication dialog. -->
    <string name="mozac_feature_prompt_username_hint">Username</string>
    <!-- Text for password field in an authentication dialog. -->
    <string name="mozac_feature_prompt_password_hint">Password</string>
    <!-- Negative confirmation that we should not save the new or updated login -->
    <string name="mozac_feature_prompt_dont_save">Don’t save</string>
    <!-- Positive confirmation that we should save the new or updated login -->
    <string name="mozac_feature_prompt_save_confirmation">Save</string>
    <!-- Positive confirmation that we should save the updated login -->
    <string name="mozac_feature_prompt_update_confirmation">Update</string>
    <!-- Prompt message displayed when app detects a user has entered a password and user decides if app should save it. The first parameter is the name of the application (For example: Fenix)  -->
    <string name="mozac_feature_prompt_logins_save_message">Do you want %s to save this login?</string>
    <!-- Text for a label for the field when prompt requesting a text is shown. -->
    <!-- For more info take a look here https://developer.mozilla.org/en-US/docs/Web/API/Window/prompt -->
    <string name="mozac_feature_prompts_content_description_input_label">Label for entering a text input field</string>
    <!-- Title of a color picker dialog, this text is shown above a color picker. -->
    <string name="mozac_feature_prompts_choose_a_color">Choose a color</string>
    <!-- Text of a confirm button in dialog requesting to open a new window. -->
    <string name="mozac_feature_prompts_allow">Allow</string>
    <!-- Text of a negative button in dialog requesting to open a new window. -->
    <string name="mozac_feature_prompts_deny">Deny</string>
    <!-- Title of the month chooser dialog. -->
    <string name="mozac_feature_prompts_set_month">Pick a month</string>
    <!-- January (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_jan">Jan</string>
    <!-- February month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_feb">Feb</string>
    <!-- March month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_mar">Mar</string>
    <!-- April month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_apr">Apr</string>
    <!-- May month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_may">May</string>
    <!-- June month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_jun">Jun</string>
    <!-- July month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_jul">Jul</string>
    <!-- August month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_aug">Aug</string>
    <!-- September month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_sep">Sep</string>
    <!-- October month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_oct">Oct</string>
    <!-- November month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_nov">Nov</string>
    <!-- December month of the year (short description), used on the month chooser dialog. -->
    <string name="mozac_feature_prompts_dec">Dec</string>
</resources>
